--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-f/*////////////// Fonts //////////////*/
+/*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
 
-
+@font-face{
+  font-family: "Baskerville";
+  src: url("fonts/Baskerville.ttc");
+}
 
 /*////////// Global Styles //////////*/
 
