--- a/css/style.css
+++ b/css/style.css
@@ -25,5 +25,8 @@ body {
 /* Write all remaining styles here */
 
 h1 {
+  font-family: "Baskerville", serif;
+  font-size: 4em;
+  color: blue;
   
 }
