automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ h2 {
   font-size: 2em;
 }
 
-img-style {
+.img-style {
   padding:  5em, 5em, 5em,5em;
   background: color: rgb(111, 127, 122);
 }
