--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ h2 {
 }
 
 .img-style {
-  padding:  5em, 5em, 5em,5em;
+  margin:  5em, 5em, 5em,5em;
   background: color: rgb(111, 127, 122);
 }
 
