automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h2 {
 
 .img-style {
   margin:  5em, 5em, 5em,5em;
-  background: color: rgb(111, 127, 122);
+  background: rgb(111, 127, 122);
 }
 
 
