automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,16 @@ h2 {
   font-size: 2em;
 }
 
+.img-style {
+   border: 5px rgb(111, 127, 122) solid;
+}
 
 .link-access {
   text-decoration: none;
 }
 
 
-img {
+.logo-images {
   border: 5px rgb(111, 127, 122) solid;
 }
 
