--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif; 
-	color: rgb(111, 127, 122);
+	color: #555;
 }
 
 .wrapper {
