--- a/css/style.css
+++ b/css/style.css
@@ -32,11 +32,11 @@ h1 {
   font-weight: normal;
   font-family: 'Baskerville', serif;
   border-bottom: 1px solid #ccc;
-  color: rgb(111, 127, 122);
+  color: #ccc;
 }
 
 h1:hover{
-  
+  color: rgb(111, 127, 122);
 }
 
 h2 {
