--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 /* Write all remaining styles here */
 
-a {
+h1 {
   padding-bottom: 10px;
   margin: 0 0 5px;
   font-size: 5em;
@@ -35,7 +35,7 @@ a {
   color: #ccc;
 }
 
-a:hover{
+h1:hover{
   color: rgb(111, 127, 122);
 }
 
