automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ footer {
   border: 5px  rgb(111, 127, 122) solid;
 }
 
-.learn-more-link:hover {
+.link-access:hover {
   text-decoration: underline;
 }
 
