--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,18 @@
 
 /* link the web font used for the level 1 heading here */
 
+@font-face{
+  font-family: "Baskerville";
+  src: url(../fonts/Baskerville.ttc);
+}
+
 /*////////// Global Styles //////////*/
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
 	font-family: 'Times New Roman', serif; 
+	color: #555;
 }
 
 .wrapper {
@@ -18,3 +24,67 @@ body {
 }
 
 /* Write all remaining styles here */
+
+h1 {
+  padding-bottom: 10px;
+  margin: 0 0 5px;
+  font-size: 5em;
+  font-weight: normal;
+  font-family: 'Baskerville', serif;
+  border-bottom: 1px solid #ccc;
+  color: #ccc;
+  
+}
+
+h1:hover{
+  color: rgb(111, 127, 122);
+}
+
+h2 {
+  color: rgb(111, 127, 122);
+  font-size: 2em;
+}
+
+footer {
+  font-size: .8em;
+  text-align: right;
+  margin: 20px;
+}
+
+.img-style {
+   border: 5px #ccc solid;
+}
+
+.link-access {
+  text-decoration: none;
+}
+
+
+.logo-images {
+  border: 5px #ccc solid;
+}
+
+.logo-images:hover{
+  border: 5px  rgb(111, 127, 122) solid;
+}
+
+.learn-more-link:hover {
+  text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
